first commit, layout

--- a/app/views/static_pages/favorites.html.erb
+++ b/app/views/static_pages/favorites.html.erb
@@ -1,1 +1,6 @@
-Please build the favorites page here.
+<%= render "sidenav" %>
+<div class="searchPage">
+  <h2>Favorites</h2>
+  <h5>Your Favorite Gems </h5>
+  <h5>loop through favorited gems here, if none deafult "none"ERB </h5>
+</div>
