--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,8 @@
-Please build the search page here.
+<%= render "sidenav" %>
+<div class="searchPage">
+  <h2>Search Gems</h2>
+  <div class="searchBar">
+    <input type="text" name="seach" placeholder="Search" class="round" />
+    <input type="submit" class="corner" value=""/>
+  </div>
+</div>
