--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,70 @@
 
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
+
+//Side Navbar
+ .sidenav {
+     height: 100%;
+     width: 30%;
+     position: fixed;
+     z-index: 1; /* Stay on top */
+     top: 0;
+     left: 0;
+     background-image: url("map.png");
+     overflow-x: hidden; /* Disable horizontal scroll */
+     padding-top: 30px;
+     text-align: right;
+ }
+
+ /* The navigation menu links */
+ .sidenav a {
+     padding: 8px 8px 8px 32px;
+     text-decoration: none;
+     font-size: 25px;
+     color: white;
+     display: block;
+     transition: 0.3s
+ }
+
+ .navpages {
+   padding-top: 50%;
+ }
+
+ .sidenav a:hover, .offcanvas a:focus{
+     color: #65c2e6;
+ }
+
+//Seach page main content
+
+ .searchPage {
+   margin-left: 33%;
+   padding: 20% 0% 0% 5%;
+ }
+
+ .round {
+    width: 100%;
+    border-radius: 15px;
+    border: 1px lightgrey solid;
+    padding: 5px 5px 5px 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.corner {
+    position: absolute;
+    top: 3px;
+    left: 95%;
+    height: 20px;
+    width: 20px;
+    z-index: 10;
+    border-radius: 10px;
+    border: none;
+    background: url("magnifying-glass.png");
+}
+
+.searchBar {
+    position: relative;
+    width: 70%;
+}
