--- a/app/views/static_pages/_noGems.erb
+++ b/app/views/static_pages/_noGems.erb
@@ -1,3 +1,6 @@
-<div class="no gems">
-<h5>Oh no! Looks like that gem can't be found.</h5>
+<div class="form-group has-danger">
+  <label class="form-control-label" for="inputDanger1">Input with danger</label>
+  <input type="text" class="form-control form-control-danger" id="inputDanger1">
+  <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
+  <small class="form-text text-muted">Example help text that remains unchanged.</small>
 </div>
